Implementation that allows user enter input values